# pip_line

./: CMakeLists.txt  package.xml
config/: parameter.xml  plane_fitter_pcd.ini  show_PC_processing.rviz  steps.txt
data/: height_map_points.pcd  obstacle.pcd  pc_world.pcd  plane.pcd  processed.pcd  submap.pcd  world_pc.pcd
foot_visual/: leftfoot4.STL  rightfoot4.STL
include/: plane_info.h
include/AstarHierarchicalFootstepPlanner/: AstarHierarchicalFootstepPlanner.h  AstarHierarchicalFootstepPlannerTra.h
include/PEAC_AHFP/: AHCParamSet_AHFP.hpp  AHCPlaneFitter_AHFP.hpp  AHCPlaneSeg_AHFP.hpp  AHCTypes_AHFP.hpp  AHCUtils_AHFP.hpp  DisjointSet_AHFP.hpp  eig33sym_AHFP.hpp  plane_fitter_pcl_AHFP.hpp
include/PEAC_AHFP_pl/: AHCParamSet_AHFP.hpp  (+7 more)
launch/: gazebo.launch  launch.launch  sim_world.launch
paper/: processed.pcd
pic_process/: CMakeLists.txt  crop_image.cpp  getHeightMapImage.cpp  pic_process.cpp
rviz/: elevationMap.rviz  test_planner.rviz
sim_environment/: environment.sdf  sim_terrain.world
src/: AstarHierarchicalFootstepPlanner.cpp  AstarHierarchicalFootstepPlannerTra.cpp  main.cpp  pip_line.cpp  wheel_walk.cpp
test/: chatgpt.cpp  draw_climbed_steps.cpp  draw_cutting_result.cpp  draw_cutting_result_incline.cpp  draw_picture.cpp  draw_walk_steps.cpp  draw_walk_steps_GZF.cpp  getData.cpp  main.cpp  quatree_color.cpp  test_heightmap.cpp  test_map.cpp  test_plane.cpp  test_quatree.cpp  test_quatree_node.cpp  test_segmentation.cpp  test_segmentation_pcl.cpp  test_steps.cpp  test_type.cpp  test_type_orginazed_points.cpp  test_xml.cpp
(+36 files in other folders)
